Change image file extension from .jpg to .JPG

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="bio info">
           <div class="image-container">
              <div>
-              <img src="./image/img_small.jpg"/>
+              <img src="./image/img_small.JPG"/>
              </div>
                 <div class="data">
 		                <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
