Fix image filename case in projects.html

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
   </figure>
   <figure class="img-box">
     <figcaption>Digital Marketing Analysis. Jupyter Notebook.</figcaption>
-    <img src="./image/WebTraffic.png" class="image"/>
+    <img src="./image/WebTraffic.PNG" class="image"/>
     <a href="https://github.com/azakrevskiy/webtraffic.git">
                   <div class="overlay">
                     <div class="info">Website Traffic Analytics. SQL, Tableau</div>
