--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
       <div class="portfolio">
   <figure class="img-box">    
            <figcaption>Digital Marketing Analysis. Jupyter Notebook.</figcaption> 
-    <img src="./image/EFunnel.png" class="image"/>
+    <img src="./image/EFunnel.PNG" class="image"/>
     <a href="https://github.com/azakrevskiy/ecommercefunnel.git">
                   <div class="overlay">
                     <div class="info">E-commerce Funnel. SQL, Tableau</div>
@@ -41,7 +41,7 @@
   </figure>
   <figure class="img-box">  
      <figcaption>Frontend web development. HTML, CSS</figcaption>                    
-     <img src="./image/HuntingClub.png" class="image"/>
+     <img src="./image/HuntingClub.PNG" class="image"/>
     <a href="https://azakrevskiy.github.io/HuntingClub/">
                   <div class="overlay">
                     <div class="info">Hunting Club. HTML, CSS. Responsive Web Design</div>
@@ -57,7 +57,7 @@
   </figure>
 <figure class="img-box">  
      <figcaption>Data Analysis. Jupyter Notebook</figcaption>                    
-     <img src="./image/LifeExp.png" class="image"/>
+     <img src="./image/LifeExp.PNG" class="image"/>
     <a href="https://github.com/azakrevskiy/lifeexpectancygdp.git">
                   <div class="overlay">
                     <div class="info">GDP and Life expectancy. Python, pandas, matplotlib</div>
@@ -73,7 +73,7 @@
   </figure>
 <figure class="img-box">  
      <figcaption>Data Analysis. Jupyter Notebook</figcaption>                    
-     <img src="./image/MedIns.png" class="image"/>
+     <img src="./image/MedIns.PNG" class="image"/>
     <a href="https://github.com/azakrevskiy/medinspp.git">
                   <div class="overlay">
                     <div class="info">Medical Insurance Costs. Python</div>
@@ -89,7 +89,7 @@
   </figure>
 <figure class="img-box">  
      <figcaption>Data Vizualization. Tableau</figcaption>                    
-     <img src="./image/VIZ_2.png" class="image"/>
+     <img src="./image/VIZ_2.PNG" class="image"/>
     <a href="https://public.tableau.com/views/viz_11_Trafficvolumeforeverycampaignbrokenbysource_channel_/Sheet1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">
                   <div class="overlay">
                     <div class="info">Web Traffic Vizualization with Tableau</div>
@@ -97,7 +97,7 @@
   </figure>
 <figure class="img-box">  
      <figcaption>Data Vizualization. Tableau</figcaption>                    
-     <img src="./image/VIZ_3.png" class="image"/>
+     <img src="./image/VIZ_3.PNG" class="image"/>
     <a href="https://public.tableau.com/views/viz_10_Trafficthroughchannelsbrokenbycampaign/Sheet1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">
                   <div class="overlay">
                     <div class="info">Web Traffic Vizualization with Tableau</div>
@@ -105,7 +105,7 @@
   </figure>
 <figure class="img-box">  
      <figcaption>Data Vizualization. Tableau</figcaption>                    
-     <img src="./image/VIZ_4.png" class="image"/>
+     <img src="./image/VIZ_4.PNG" class="image"/>
     <a href="https://public.tableau.com/views/viz_1_TrafficTrend_dashboard/Sheet7?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">
                   <div class="overlay">
                     <div class="info">Web Traffic Vizualization with Tableau</div>
