--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
   </figure>
 <figure class="img-box">  
      <figcaption>Data Analysis. Jupyter Notebook</figcaption>                    
-     <img src="./image/Market.png" class="image"/>
+     <img src="./image/Market.PNG" class="image"/>
     <a href="https://github.com/azakrevskiy/marketanalisys.git">
                   <div class="overlay">
                     <div class="info">Marketing Data Analitics. Python, pandas, matplotlib</div>
