--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
   </figure>
 <figure class="img-box">  
      <figcaption>Data Vizualization. Tableau</figcaption>                    
-     <img src="./image/VIZ_1.png" class="image"/>
+     <img src="./image/VIZ_1.PNG" class="image"/>
     <a href="https://public.tableau.com/views/Dashboard2_17575149569190/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">
                   <div class="overlay">
                     <div class="info">FAA Strike Reports Vizualization with Tableau</div>
