--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="menu-dropdown">                  
     <ul class="nav-menu">
       <li><a href="#mskills">Skills</a></li>
-      <li><a href="#mexpirience">Expirience</a></li>
+      <li><a href="#mexperience">Experience</a></li>
       <li><a href="#meducation">Education</a></li>
       <li><a href="#mcontactme">Contact Me</a></li>
       <li><a href="projects.html">Projects</a></li>
@@ -116,7 +116,7 @@ and data processing. In August 2025 I completed the Data Analytics course, which
                         <li><span>Visual Studio, C#, .net framework</span><br>Desktop Aplications</li>
             </ul>
          </div>
-         <div class="expirience" id="mexpirience">                               
+         <div class="expirience" id="mexperience">                               
            <h2 class="subtitle">Experience</h2>
              <ul>
                         <li><span>2023 - Agust 2025</span><br>Web Development/Data Analytics bootcamp at Codecademy.com</li>
