--- a/index.html
+++ b/index.html
@@ -76,16 +76,14 @@
           <div class="data-container">
                  <div class="text">
   <p>Hi, my name is Andrey Zakrevskiy. Thank you for taking your time
- to visit my page. I was born and raised in Russia, 
-but now I live in the United States. 
- I moved in 2011 to reunite with my family.
+ to visit my page. 
   </p>
   <p>
- Before moving to the USA, I worked in the IT industry in Russia. My first job was at a small IT company 
+ Before moving to the USA, I worked in the IT industry. My first job was at a small IT company 
 that developed and maintained accounting software for a wide range of organizations. Then I joined a large
- IT company that provided IT infrastructure services for oil and gas companies and their service contractors
- in the West Siberian region. My department was responsible for supporting and implementing 
-various types of applications that used Oracle and MSSQL as their primary data storage.
+ IT company that provided IT infrastructure services for the TNK-BP group of companies
+ in the Western Siberian region. My department was responsible for supporting and implementing 
+various types of applications that used Oracle and MSSQL databases as their primary data storage.
  You can see my full work history on my <a href="https://www.linkedin.com/in/andrey-zakrevskiy-88360690"> LinkedIn </a> profile.
  </p>
  <p>
@@ -95,8 +93,8 @@ I developed and maintained a MSSQL database to automate my business processes.
  </p>
  <p>
  Since 2023, I have been a student at Codecademy.com bootcamp, where I refreshed 
-my previous knowledge and learned new IT technologies in the field of web development 
-and data processing. In August 2025 I completed the Data Analytics course, which is confirmed by a professional certificate. 
+my previous knowledge and learned new IT technologies in the field of data processing  
+and web development. In August 2025, I earned a professional certificate in Data Analytics. 
  You can view my portfolio projects on the <a href="./projects.html"> "Projects" </a> page.
  </p>
  <p>
