Refine career narrative in index.html
Updated text for clarity and consistency in career description.

--- a/index.html
+++ b/index.html
@@ -87,14 +87,13 @@ various types of applications that used Oracle and MSSQL databases as their prim
  You can see my full work history on my <a href="https://www.linkedin.com/in/andrey-zakrevskiy-88360690"> LinkedIn </a> profile.
  </p>
  <p>
- After moving to the US, my work was not related to IT. However, while working at a high tech company, 
+ After moving to the US, my career initially shifted away from IT. However, while working at a high-tech company, 
 I developed and maintained a MSSQL database to automate my business processes.
- Some time ago, after my career at high tech company ended, I decided to return to the IT industry.
+ Some time ago, after my career at high-tech company ended, I decided to return to the IT industry.
  </p>
  <p>
- Since 2023, I have been a student at Codecademy.com bootcamp, where I refreshed 
-my previous knowledge and learned new IT technologies in the field of data processing  
-and web development. In August 2025, I earned a professional certificate in Data Analytics. 
+ Since 2023, I have been studying at Codecademy’s Data Analytics Bootcamp, where I refreshed my previous knowledge and learned
+ new technologies in data processing and web development. In August 2025, I earned a professional certificate in Data Analytics. 
  You can view my portfolio projects on the <a href="./projects.html"> "Projects" </a> page.
  </p>
  <p>
