Revise job seeking statement for clarity

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ I developed and maintained a MSSQL database to automate my business processes.
  You can view my portfolio projects on the <a href="./projects.html"> "Projects" </a> page.
  </p>
  <p>
-  I am currently looking for a company that would hire me as a Data Analyst or SQL Specialist. 
+  I am now seeking an opportunity to contribute as a Data Analyst or SQL Specialist 
  </p>
                 </div>
                  
