Revise work experience description in index.html
Reworded the paragraph about work experience for clarity and conciseness.

--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
  to visit my page. 
   </p>
   <p>
- Before moving to the USA, I worked in the IT industry. My first job was at a small IT company 
-that developed and maintained accounting software for a wide range of organizations. Then I joined a large
- IT company that provided IT infrastructure services for the TNK-BP group of companies
- in the Western Siberian region. My department was responsible for supporting and implementing 
+ Before relocating to the USA, I worked in the IT industry, starting at a small company that developed 
+and maintained accounting software for various organizations. Later, I joined a large IT firm providing infrastructure services
+ for the TNK-BP group of companies in the Western Siberian region. My department was responsible for supporting and implementing 
 various types of applications that used Oracle and MSSQL databases as their primary data storage.
  You can see my full work history on my <a href="https://www.linkedin.com/in/andrey-zakrevskiy-88360690"> LinkedIn </a> profile.
  </p>
