Update Codecademy program name in index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ I developed and maintained a MSSQL database to automate my business processes.
  Some time ago, after my career at high-tech company ended, I decided to return to the IT industry.
  </p>
  <p>
- Since 2023, I have been studying at Codecademy’s Data Analytics Bootcamp, where I refreshed my previous knowledge and learned
+ Since 2023, I have been studying at Codecademy’s Bootcamp, where I refreshed my previous knowledge and learned
  new technologies in data processing and web development. In August 2025, I earned a professional certificate in Data Analytics. 
  You can view my portfolio projects on the <a href="./projects.html"> "Projects" </a> page.
  </p>
